2008-12-18  Albert Chu <chu11@llnl.gov>

	* ipmi-sel/src/ipmi-sel-entry.c (_get_sel_system_event_record):
	Fix possible output error corner case.
	
2008-12-17  Albert Chu <chu11@llnl.gov>

	* Minor documentation updates.
	
2008-12-16  Albert Chu <chu11@llnl.gov>

	* ipmi-sel/src/ipmi-sel.c (_hex_display_sel_records): Carry over
	previous fixes into this function.
	
2008-12-15  Albert Chu <chu11@llnl.gov>

	* ipmi-fru/src/ipmi-fru.c (_output_fru): Cleanup output.
	
2008-12-15  Albert Chu <chu11@llnl.gov>
	
	* configure.ac, NEWS: Update for release.

	* Tagged Release-0_7_4.	

2008-12-12  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/api/ipmi-lan-session-common.c
	(ipmi_lan_2_0_open_session): Fix Intel 2.0 workarounds.

	* ipmipower/src/ipmipower_check.c (ipmipower_check_integrity_pad),
	ipmiconsole/src/libipmiconsole/ipmiconsole_checks.c
	(ipmiconsole_check_integrity_pad): Fix integrity check corner case
	for certain cipher suite IDs.

	* ipmiconsole/ipmiconsole.8.pre.in: Add ipmiconsole
	troubleshooting notes.

	* ipmi-chassis/src/ipmi-chassis.h: Change -I (--identify) option
	to -i so it does not conflict with -I from --cipher-suite-id
	option.

	* ipmi-fru/src/ipmi-fru-util.c (ipmi-fru/src/ipmi-fru-util.c):
	Output failed checksums by default.
	
2008-12-09  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/api/ipmi-lan-session-common.c
	(ipmi_lan_2_0_open_session): Fix Intel 2.0 workarounds.

	* bmc-config/src/bmc-config-user-sections.c (enable_user_commit):
	Fix workaround for enabling a user.

	* libfreeipmi/src/api/ipmi-lan-session-common.c
	(_ipmi_lan_2_0_cmd_wrapper_verify_packet): Fix ipmi 2.0 error
	handling corner case for some motherboards.

	* libfreeipmi/src/api/ipmi-lan-session-common.c
	(ipmi_lan_2_0_open_session): Fix ipmi Intel 2.0 workaround.
	
2008-12-09  Albert Chu <chu11@llnl.gov>

	* ipmi-oem/: Add supermicro reset-intrusion oem command.  Add
	--list option support.
	
2008-12-09  Albert Chu <chu11@llnl.gov>
